2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	Support for pushing back bytes and characters into streams.

	* stream.c (null_ops, stdio_ops, tail_ops, pipe_ops,
	string_in_ops, byte_in_ops, string_out_ops, strlist_out_ops,
	dir_ops, cat_stream_ops): Structure definition updated
	with new initializers for two new virtuals.
	(stdio_handle): New member, unget_c.
	(snarf_line, stdio_get_char): Handle pushed-back character in
	h->unget_c.
	(stdio_unget_char, stdio_unget_byte, string_in_unget_char,
	byte_in_unget_byte): New static functions.
	(make_stdio_stream_common): Initialize unget_c member.
	(unget_char, unget_byte): New functions.

	* stream.h (struct strm_ops): New virtuals: unget_char and unget_byte.
	(unget_char, unget_byte): New functions declared.

	* syslog.c (syslog_strm_ops): Two new initializers.

	* eval.c (eval_init): Registered unget_char and unget_byte as
	intrinsics.

	* txr.1: Documented.

2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	* stream.c (put_byte): Bugfix: was checking whether the put_char
	virtual function is not null, rather than put_byte.

2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix in regex char ranges affecting ranges whose upper end
	corresponds to the high bit of a bitmap cell: for instance
	the character \x7f when the cell size is 32 bits.

	* regex.c (BITCELL_ALL1): Unused macro removed.
	(BITCELL_BIT): New macro to replace occurrences of a repeated
	expression.
	(CHAR_SET_INDEX, CHAR_SET_BIT): Updated to use BITCELL_BIT.
	(L0_fill_range): Bugfix: the mask1 calculation was producing all-zero
	in the condition bt1 == BITCELL_BIT; it should produce an all-ones
	mask.

2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	Version 74

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim, dep.mk: Updated.

2014-01-13  Kaz Kylheku  <kaz@kylheku.com>

	* debug.h (debug_check): Fix broken build when debugger is disabled: